Fixed twitter login on domains other than wottactic.tk. Made battlenet login available on domains other than gametactic.org

--- a/public/twitter_redirect.html
+++ b/public/twitter_redirect.html
@@ -11,7 +11,7 @@
 			return string ? string[1] : null;
 		};
 		
-		var dest = getQueryString('state');
+		var dest = getQueryString('dest');
 		window.location.replace(dest + window.location.search + window.location.hash);
     </script>
   </body>
